--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,5 +1,5 @@
 # Server port
-PORT=3000
+PORT=4000
 
 # Number of classes
 NUM_CLASSES=2
@@ -7,7 +7,5 @@ NUM_CLASSES=2
 # How many images will be shown to user
 NUM_ATTEMPTS=3
 
-# Basic auth
-AUTH=yes
-AUTH_USER=admin
-AUTH_PASSWORD=dummy
+# Frontend
+ORIGIN=http://localhost:3000
