--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-basic-auth": "^1.2.0",
     "express-session": "^1.17.1",
     "fast-glob": "^3.2.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
