--- a/server/.env.sample
+++ b/server/.env.sample
@@ -4,7 +4,7 @@ PORT=4000
 # Number of classes
 NUM_CLASSES=2
 
-# How many images will be shown to user
+# How many image pairs will be shown to user
 NUM_ATTEMPTS=3
 
 # Frontend
